--- a/project/board/templates/board/new_post.html
+++ b/project/board/templates/board/new_post.html
@@ -6,10 +6,14 @@ new post
 
 
 {% block body %}
-<form action="" method='POST'>
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit"> 작성 </button>
-</form>
+awifjoiwefjiowaejfaoiwfjioawe
+        <div class="new__post__main">
+                <form action="" method='POST'>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit"> 작성 </button>
+                </form>
+
+        </div>
 {% endblock body %}
 
