--- a/project/board/templates/board/post_new.html
+++ b/project/board/templates/board/post_new.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-  <div class="container">
+{% load static %}
+<link rel="stylesheet" href="{% static "board/css/new_post.css" %}" type="text/css">
+
+<div class="container new__post__container">
+    <div class="new__post__main">
     <form action="" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
@@ -9,4 +13,5 @@
       <input type="submit">
     </form>
   </div>
+</div>
 {% endblock %}
