익명전까지 만들었는데 아주 그냥 스파게티 막국수 비빔쫄면 코드임 리팩토링 필요

--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -6,11 +6,11 @@ username : {{user.username}}<br>
 <input type="text" id="other"><input type="submit" id="submit">
 <div id='chat_list'>
 </div>
-<div id="chat_box">
+<div id="chat_box" to="none">
     <div id='chat_header'>
 
     </div>
-    <div id='chat_room' id='none' style="overflow:scroll; width:500px; height:150px;">
+    <div id='chat_room' url='none' with='none' style="overflow:scroll; width:500px; height:150px;">
 
     </div>
     <div class="chat_input">
@@ -22,50 +22,42 @@ username : {{user.username}}<br>
 
 {% block javascript %}
 <script>
-    const chat_room = document.getElementById('chat_room')
-    const chat_header = document.getElementById('chat_header')
-    const m_btn = document.getElementById('m_submit')
     const chat_list = document.getElementById('chat_list')
+    const chat_header = document.getElementById('chat_header')
+    const chat_room = document.getElementById('chat_room')
+    const chat_text = document.getElementById('message')
+    const m_btn = document.getElementById('m_submit')
     const other = document.getElementById('other')
     const submit = document.getElementById('submit')
-    let buttons = []
-    const setBase = async (sb, chat_list, chat_header, chat_room) => {
-        const channels = await loadChatList(sb, chat_list)
-        const buttons = [...document.getElementsByClassName('url')]
-        buttons.forEach(cur => {
-            cur.addEventListener('click', async e => {
-                const target = channels.filter(_cur => _cur.url == cur.value)[0]
-                chat_header.innerHTML = `chat with ${cur.name}`
-                chat_room.innerHTML = await loadLog(target, 10)
-                chat_room.scrollTop = chat_room.scrollHeight
-                m_btn.addEventListener('click', async (e) => {
-                    sb.GroupChannel.getChannel(target.url, function (groupChannel, error) {
-                        if (error) return;
-                        groupChannel.sendUserMessage(document.getElementById('message').value,
-                            function (message, error) {
-                                if (error) return;
-                                chat_room.innerHTML += strfy(message)
-                                chat_room.scrollTop = chat_room.scrollHeight;
-                            });
-                    });
-                })
-            })
-        })
-    }
 
 
     sb.connect("{{ user.username }}", async function (user, error) {
         if (error) return;
-        await setBase(sb, chat_list, chat_header, chat_room)
-
+        const channels = await loadChatList()
+        channels.forEach(cur => addChatBtn(cur, chat_list))
+        setBase(chat_list, chat_header, chat_room)
     });
+
     submit.addEventListener('click', async (e) => {
         try {
-            await openChat(sb, other.value)
+            const channel = await openChat(other.value)
+            addChatBtn(channel, chat_list)
+            const buttons = document.getElementsByClassName('url')
+            setChannelBtn(buttons[buttons.length-1], chat_header, chat_room)
         } catch (e) {
             alert(e)
         }
-        await setBase(sb, chat_list, chat_header, chat_room)
+    })
+
+    m_btn.addEventListener('click', async (e) => {
+        sb.GroupChannel.getChannel(chat_room.getAttribute('url'), (groupChannel, error) => {
+            if(error) return
+            groupChannel.sendUserMessage(chat_text.value, (message, error)=>{
+                if(error) return
+                chat_room.innerHTML += strfy(message)
+                chat_room.scrollTop = chat_room.scrollHeight;
+            })
+        })
     })
 </script>
 {% endblock javascript %}
