메시지 알림 수정, 메인보드 페이지 접근하면 sb 연결시켜서 바로 계정생성

--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -35,7 +35,10 @@ username : {{user.username}}<br>
         if (error) return;
         const channels = await loadChatList()
         channels.forEach(cur => addChatBtn(cur, chat_list))
-        setBase(chat_list, chat_header, chat_room)
+        const buttons = [...chat_list.querySelectorAll('button')]
+        buttons.forEach(cur => {
+            setChannelBtn(cur, chat_header, chat_room)
+        })
     });
 
     submit.addEventListener('click', async (e) => {
