--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -174,6 +174,10 @@
             crossorigin="anonymous"></script>
 
     <script>
+        sb.connect("{{ user.username }}", async function (user, error) {
+            if (error) return;
+        });
+
         $('.like').click(function () {
             var pk = $(this).attr('name')
             var like_img = document.getElementById(`like_id_${pk}`);
