--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -28,6 +28,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sendbird@3.0.105/SendBird.min.js"></script>
     <script src="{% static 'js/API.js' %}"></script>
+    <script src="{% static 'js/chatUtil.js' %}"></script>
     {% block javascript %}
     {% endblock %}
 </body>
