--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -59,7 +59,7 @@ username : {{user.username}}<br>
             buttons = document.getElementsByClassName('url')
             setChannelBtn(buttons[buttons.length - 1], chat_header, chat_room)
         } catch (e) {
-            console.log(e)
+            alert('check username')
         }
     })
 
