--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="base__header">
+    <div class="base__header pc__header">
         <div class="base__header__used-space container">
             <div class="base__logo"><object type="image/svg+xml" data="{% static "/svg/logo-uf.svg" %}"></object></div>
             {% block header %}
