--- a/project/board/static/board/css/board_post/board_post_medium.css
+++ b/project/board/static/board/css/board_post/board_post_medium.css
@@ -1,3 +1,8 @@
+.mobile__board {
+    display: none!important;
+}
+
+
 .board__main {
     display: flex;
     flex-direction: row;
@@ -11,7 +16,7 @@
 }
 
 .pannel__top__state {
-    width: 300px;
+    width: 180px;
 }
 
 .board__pannel__top a {
@@ -21,7 +26,7 @@
 }
 
 .board__pannel__top img {
-    width: 120px;
+    width: 80px;
 }
 
 .board__pannel__left {
@@ -35,7 +40,7 @@
 
 .board__post__container {
     background-color: #ffffff;
-    height: 201px;
+    height: 180px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -52,10 +57,10 @@
     align-items: center;
     background-color: #e8e8e8;
     border-radius: 5px;
-    width: 7%;
+    width: 10%;
     height: 70px;
-    margin-left: 20px;
-    margin-right: 17px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .board__post__like button {
@@ -73,7 +78,7 @@
 }
 
 .post__text {
-    width: 70%;
+    width: 65%;
     display: flex;
     flex-direction: column;
 }
@@ -94,8 +99,8 @@
 }
 
 .post__image {
-    width: 181px;
-    height: 181px;
+    width: 30%;
+    height: 163px;
     margin-left: 10px;
 }
 
@@ -115,21 +120,22 @@
 .post__top__category {
     background-color: #eff2f4;
     border-radius: 4px;
-    padding: 1px 40px 3px 40px;
+    padding: 1px 20px 3px 20px;
     font-weight: normal;
     color: #5d5c5e;
     text-align: center;
-    font-size: 17px;
+    font-size: 13px;
 }
 
 .post__mid {
     display: flex;
     flex-direction: column;
     margin-top: 5px;
+    height: 100%;
 }
 
 .post__mid__title {
-    font-size: 33px;
+    font-size: 1.5rem;
     font-weight: normal;
     font-style: normal;
     line-height: 1.21;
@@ -142,12 +148,12 @@
 
 .post__mid__title a {
     color: #302d2c;
-    width:100%;
+    /* width:100%; */
     text-decoration: none;
 }
 
 .post__mid__content {
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -178,7 +184,7 @@
 .post__bottom__icon {
     display: flex;
     align-items: center;
-    width: 40%;
+    width: 50%;
     justify-content: space-between;
 }
 
@@ -189,7 +195,7 @@
 }
 
 .s_con img {
-    height: 15px;
+    height: 13px;
     width: 30px;
     text-align: left;
     margin-right: 10%;
@@ -206,7 +212,7 @@
     justify-content: center;
     flex-direction: column;
     background-color: #ffffff;
-    height: 200px;
+    height: 180px;
     border-radius: 12px;
 
     margin-bottom: 20px;
@@ -214,11 +220,12 @@
 }
 
 .pannel__right__create img {
-    width: 71px;
+    width: 40%;
+    margin-bottom: 10px;
 }
 
 .pannel__right__create p {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -238,7 +245,7 @@
 .pannel__right__category p {
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
