--- a/project/core/static/components/spinner.css
+++ b/project/core/static/components/spinner.css
@@ -15,9 +15,9 @@
 }
 
 .spinner::before {
-    animation: 2s linear infinite spinner;
-    border: solid 3px var(--main-color);
-    border-bottom-color: #EF6565;
+    animation: 1s linear infinite spinner;
+    border: solid 3px #EEFFE3;
+    border-bottom-color: var(--main-color);
     border-radius: 50%;
     content: "";
     height: 40px;
@@ -29,5 +29,14 @@
     transform-origin: center;
     width: 40px;
     will-change: transform;
+}
 
+.spinner-box {
+    display: none;
+    width: 100%;
+    height: 10rem;
+}
+
+.spinner-on {
+    display: block;
 }
